added plot for WEIGHT~NECK and comment.

--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -27,6 +27,7 @@ abline(simp)
 summary.lm(simp)
 ```
 
+According to the observation for WEIGHT explained by NECK, we can see that the RSE is 43.91 and the adjusted R-squared is 0.87.  
 
 ## Compare all models that predict WEIGHT other than NECK. Then order them from worst to best by its value of Adjusted-Rsquared (bigger is better), or by RSE (residual standard error) where smaller is better. 
 
