--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -71,3 +71,17 @@ LENGTH RSE is 61.83
 HEADLEN RSE is 67.81         
 HEADWTH RSE is 76.41  
 
+```{r}
+mCHEST <- lm(WEIGHT~CHEST,data=bears)
+plot(WEIGHT~CHEST,data=bears)
+abline(mCHEST)
+summary.lm(mCHEST)
+```
+
+For this last plot, we see that the residual standard error is 33.08, and the adjusted R-squared is 0.962.   
+Best to worst ordered by RSE     
+CHEST RSE is 33.08    
+NECK RSE is 43.91      
+LENGTH RSE is 61.83     
+HEADLEN RSE is 67.81         
+HEADWTH RSE is 76.41  
